# pomoduo

./: .gitignore  AGENTS.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/analytics/: model.rs  service.rs
src-tauri/src/storage/: mod.rs  state_file.rs
src-tauri/src/system/: notify.rs
src-tauri/src/timer/: engine.rs
src/features/insights/: InsightsDrawer.test.tsx  InsightsDrawer.tsx  InsightsView.test.tsx  InsightsView.tsx  insightsEvents.ts  trends.test.ts  trends.ts  types.ts
src/features/settings/: SettingsView.test.tsx  SettingsView.tsx
src/features/timer/: TimerView.tsx  timerEvents.ts  types.ts
src/i18n/: index.ts  locale.ts  messages.ts  provider.tsx
