[package]
name = "pomoduo"
version = "0.1.0"
description = "Cross-platform Pomodoro timer"
authors = ["Terence"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-notification = "2.0.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
